use message component instead of separate winner and alert plus update respnsive css

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -8,9 +8,9 @@
 }
 
 .message.win {
-  background: #00ffffcf;
+  background: #00ffff9d;
 }
 
 .message.warn {
-  background: #e1ff007c;
+  background: rgba(255, 221, 0, 0.752);
 }
