--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+@media only screen and (min-width: 980px) {
+  .app__header {
+    font-size: 1.4rem;
+  }
 }
