--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -4,3 +4,14 @@
   grid-template-rows: 1fr 1fr 1fr;
   margin: 0 auto;
 }
+
+.reset {
+  background-color: #04aa6d;
+  border: none;
+  padding: 0.75em 1em;
+  text-align: center;
+  display: flex;
+  font-size: 1em;
+  border-radius: 0.75em;
+  margin: 0 auto 1em auto;
+}
