--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -1,17 +1,21 @@
-.board {
+.board__container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   margin: 0 auto;
 }
 
-.reset {
-  background-color: #04aa6d;
-  border: none;
+.board__reset {
+  background-color: #04aa36;
+  border: 1px solid #000;
   padding: 0.75em 1em;
   text-align: center;
   display: flex;
   font-size: 1em;
   border-radius: 0.75em;
   margin: 0 auto 1em auto;
+}
+
+.board__reset:hover {
+  border: 1px solid #09d947;
 }
