--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -2,9 +2,9 @@
   position: absolute;
   text-align: center;
   color: #000;
-  width: 100%;
   padding: 1em;
   left: 0;
+  right: 0;
   top: 0;
 }
 
